# my-kernel

./: Cargo.toml  README.md  link.ld  x86_64-kernel.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
