[package]
name = "my_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.11"
pic8259_simple = "0.3.0"
pc-keyboard = "0.6.0"
lazy_static = "1.4.0"

[package.metadata.bootimage]
run-command = "qemu-system-x86_64 -drive format=raw,file={disk_image}"